@@ -7,6 +7,7 @@ Version 1.4.21 - SVN
   - Now allow more than one plugin to control the compose form submit action.
   - When sorting by received date, the received date is now shown on the
     message list.
+  - Explicitly disable caching for left_main and right_main pages (#2983134).
 
 Version 1.4.20 - 06 Mar 2010
 ---------------------------
